# HoNO

./: CMakeLists.txt  HoNO.cpp  PleaseReadThisFirst.txt  README.md  dataset_evaluation_HoNO.cpp
five_datasets/pcd_files_UWA/: T-rex_high_res_low_0.pcd  cheff_res_low_0.pcd  chicken_high_0.pcd  chicken_high_res_low_0.pcd  parasaurolophus_high_res_low_0.pcd  rhino_0.pcd  rhino_res_low_0.pcd  rs10_0.pcd  rs11_0.pcd  rs12_0.pcd  rs13_0.pcd  rs14_0.pcd  rs15_0.pcd  rs16_0.pcd  rs17_0.pcd  rs18_0.pcd  rs19_0.pcd  rs1_0.pcd  rs20_0.pcd  rs21_0.pcd  rs22_0.pcd  rs23_0.pcd  rs24_0.pcd  rs25_0.pcd  rs26_0.pcd  rs27_0.pcd  rs28_0.pcd  rs29_0.pcd  rs2_0.pcd  rs30_0.pcd  rs31_0.pcd  rs32_0.pcd  rs33_0.pcd  rs34_0.pcd  rs35_0.pcd  rs36_0.pcd  rs37_0.pcd  rs38_0.pcd  rs39_0.pcd  rs3_0.pcd  (+16 more)
five_datasets/pcd_files_kinect/: Doll013_0.pcd  Frog000_0.pcd  Frog001_0.pcd  Frog004_0.pcd  Frog011_0.pcd  Frog012_0.pcd  Frog013_0.pcd  PeterRabbit000_0.pcd  PeterRabbit003_0.pcd  PeterRabbit005_0.pcd  PeterRabbit014_0.pcd  Squirrel000_0.pcd  Squirrel001_0.pcd  Squirrel002_0.pcd  Squirrel005_0.pcd  Squirrel011_0.pcd  duck002_0.pcd  duck007_0.pcd  duck009_0.pcd  mario003_0.pcd  mario009_0.pcd  mario010_0.pcd  mario011_0.pcd
five_datasets/pcd_files_retreival/: Scene0_0.3.pcd  Scene0_0.5.pcd  Scene10_0.1.pcd  Scene10_0.3.pcd  Scene10_0.5.pcd  Scene11_0.1.pcd  Scene11_0.3.pcd  Scene11_0.5.pcd  Scene12_0.1.pcd  Scene12_0.3.pcd  Scene12_0.5.pcd  Scene13_0.1.pcd  (+41 more)
include/: HoNO.h  HoNO.h~  dataset_evaluation_HoNO.h  dataset_evaluation_HoNO.h~  general_functions.h  general_functions.h~  headers.h
(+122 files in other folders)
